syntax = 'proto3';

import 'google/protobuf/timestamp.proto';
import 'common.proto';

package o2.bookkeeping;

// Services

service EnvironmentService {
  rpc Create(EnvironmentCreationRequest) returns (Environment);
  rpc Update(EnvironmentUpdateRequest) returns (Environment);
}

// High level messages

message EnvironmentCreationRequest {
  string id = 1;
  optional google.protobuf.Timestamp createdAt = 2;
  optional string status = 3;
  optional string statusMessage = 4;
}

message EnvironmentUpdateRequest {
  string id = 1;
  optional google.protobuf.Timestamp toredownAt = 2;
  optional string status = 3;
  optional string statusMessage = 4;
}

// Low-level messages and enums

message Environment {
  string id = 1;
  // Unix timestamp when this entity was created.
  google.protobuf.Timestamp createdAt = 2;
  // Unix timestamp when this entity was last updated.
  google.protobuf.Timestamp updatedAt = 3;
  // Unix timestamp when this entity was tore down.
  google.protobuf.Timestamp toredownAt = 4;
  // The status of the environment.
  string status = 5;
  // A message explaining the status or the current state of the environment.
  string statusMessage = 6;
  // Array of minified Run objects.
  repeated Run runs = 7;
}
